fixed off center linux tab

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -37,7 +37,9 @@
 }
 
 *,
-::after,
+::after { 
+    box-sizing: content-box
+}
 ::before {
     box-sizing: border-box
 }
